[package]
name = "rustodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
comfy-table = "7.1.0"
crossterm = "0.27.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
